Fix bug on interactive list page where high contrast theme showed buttons with white text on white background

--- a/themes/Nottingham/highcontrast/highcontrast.css
+++ b/themes/Nottingham/highcontrast/highcontrast.css
@@ -327,9 +327,13 @@ a.hotspot, a.hotspot.selected {
   background: #333333;
 }
 
-.x_list_page .highlight {
-  background: #4d4d4d;
+.x_list_page a.listItem.highlight:link {
+  background: #333333 !important;
   color: #ffffff;
+}
+
+.x_list_page a.listItem:link {
+  background: #4d4d4d !important;
 }
 
 .x_list_page #pageContents a.listItem:link, #passageHolder a.listItem:link, #passageHolder a.listItem:visited, #passageHolder a.listItem:hover, #passageHolder a.listItem:active {
